--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body{
     font-family: 'Lato';
 }
 
+.portfolio-link{
+    color:black;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .navbar-brand{
     font-family: 'Pacifico';
     font-size: 35px;
@@ -84,7 +90,13 @@ body{
 
 /* Section-2 */
 .section-2, .row, .col-md-2{
-    margin-top: 5%;
+    margin-top: 3%;
     margin-bottom: 5%;
+}
+
+.my-profile{
+    width: 220px;
+    height: 280px;
+    border-radius: 50%;
 }
 
